--- a/app/src/main/res/layout/content_display.xml
+++ b/app/src/main/res/layout/content_display.xml
@@ -6,8 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context=".Content"
-        android:navigationBarColor="@color/colorPrimary">
+        tools:context=".Content">
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/contentToolBar"
