--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -62,7 +62,59 @@
                 android:layout_marginTop="20dp"
                 android:textSize="20sp"/>
 
-        <com.google.android.material.button.MaterialButton
+
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                app:layout_constraintTop_toBottomOf="@id/profileEmail">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/updateUsernameButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    style="@style/loginButton"
+                    android:text="@string/action_update_username"
+                    android:textSize="16sp"
+                    android:padding="10dp"
+                    android:gravity="center"
+                    android:enabled="true"
+                    android:layout_weight="1"
+                    android:layout_marginTop="15dp"/>
+
+                <com.google.android.material.button.MaterialButton
+                        android:id="@+id/updatePasswordButton"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/loginButton"
+                        android:text="@string/action_update_password"
+                        android:textSize="16sp"
+                        android:padding="10dp"
+                        android:gravity="center"
+                        android:enabled="true"
+                        android:layout_weight="1"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="15dp"/>
+
+                <com.google.android.material.button.MaterialButton
+                        android:id="@+id/signOutButton"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/loginButton"
+                        android:text="@string/action_sign_out"
+                        android:textSize="16sp"
+                        android:padding="10dp"
+                        android:gravity="center"
+                        android:enabled="true"
+                        android:layout_weight="1"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="15dp"/>
+
+        </LinearLayout>
+     <!--
+     <com.google.android.material.button.MaterialButton
                 android:id="@+id/updateUsernameButton"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
@@ -77,8 +129,7 @@
                 app:layout_constraintEnd_toStartOf="@id/updatePasswordButton"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="15dp"/>
-
-        <com.google.android.material.button.MaterialButton
+     <com.google.android.material.button.MaterialButton
                 android:id="@+id/updatePasswordButton"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
@@ -109,20 +160,7 @@
                 app:layout_constraintEnd_toEndOf="@id/profileBlock"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginTop="15dp"/>
-
-     <!--   <com.google.android.material.button.MaterialButton
-                android:id="@+id/signOutButton"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/profileUsername"
-                app:layout_constraintStart_toEndOf="@id/updateEmailButton"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="15dp"
-                android:textSize="16sp"
-                android:padding="10dp"
-                android:gravity="center"
-                android:enabled="true"/>-->
+                android:layout_marginTop="15dp"/> -->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
