--- a/app/src/main/res/layout/title_datalist.xml
+++ b/app/src/main/res/layout/title_datalist.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/titleDataList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -8,17 +9,25 @@
         android:focusable="true"
         android:focusableInTouchMode="true">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/insertDataButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="16dp"
-            app:maxImageSize="32dp"
-            style="@style/loginButton">
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/refreshRecycle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/dataList"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
-    </com.google.android.material.floatingactionbutton.FloatingActionButton>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/insertDataButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="16dp"
+                app:maxImageSize="32dp"
+                style="@style/loginButton"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
