--- a/app/src/main/res/layout/dataitem.xml
+++ b/app/src/main/res/layout/dataitem.xml
@@ -14,22 +14,22 @@
 
         <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="?attr/selectableItemBackgroundBorderless">
 
                 <ImageView
-                        android:id="@+id/thumbnail"
+                        android:id="@+id/dataItemImage"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/maxresdefault"/>
+                        android:scaleType="fitXY"/>
+                <!-- android:src="@drawable/maxresdefault"-->
 
                 <TextView
                         android:id="@+id/dataItemTitle"
                         style="@style/TextAppearance.AppCompat.Headline"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/thumbnail"
+                        android:layout_alignBottom="@+id/dataItemImage"
                         android:layout_alignParentStart="true"
                         android:layout_marginStart="8dp"
                         android:layout_marginBottom="8dp"
@@ -38,10 +38,10 @@
                         android:textColor="@color/colorText" />
 
                 <TextView
-                        android:id="@+id/newsInfo"
+                        android:id="@+id/dataItemResult"
                         style="@style/TextAppearance.AppCompat.Subhead"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_below="@+id/dataItemTitle"
                         android:layout_alignParentStart="true"
                         android:layout_marginStart="8dp"
