--- a/app/src/main/res/layout/farm_overview.xml
+++ b/app/src/main/res/layout/farm_overview.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    <ImageView
+            android:id="@+id/testImage"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/maxresdefault"/>
+    <androidx.core.widget.ContentLoadingProgressBar
+            android:id="@+id/testProgress"
+            android:layout_width="250dp"
+            android:layout_height="20dp"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:indeterminate="false"
+            android:progress="0"
+            android:max="100"
+            android:layout_marginBottom="35dp"
+            android:visibility="invisible"/>
 </LinearLayout>
