--- a/app/src/main/res/layout/title_signin.xml
+++ b/app/src/main/res/layout/title_signin.xml
@@ -97,6 +97,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="25dp"
                     app:errorEnabled="true"
+                    app:passwordToggleEnabled="true"
                     android:background="@color/colorSignBackground"
                     style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                 <com.google.android.material.textfield.TextInputEditText
