--- a/app/src/main/res/layout/title_signup.xml
+++ b/app/src/main/res/layout/title_signup.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/signUpEmailBlock"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="140dp"
             android:orientation="horizontal"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -99,6 +99,8 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="25dp"
                 app:errorEnabled="true"
+                app:counterEnabled="true"
+                app:counterMaxLength="10"
                 android:background="@color/colorSignBackground"
                 style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
             <com.google.android.material.textfield.TextInputEditText
@@ -107,6 +109,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="text"
                     android:imeOptions="actionNext"
+                    android:maxLength="10"
                     android:selectAllOnFocus="true">
             </com.google.android.material.textfield.TextInputEditText>
         </com.google.android.material.textfield.TextInputLayout>
@@ -116,7 +119,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/signUpPasswordBlock"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="85dp"
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@+id/signUpUsernameBlock">
 
@@ -142,6 +145,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="25dp"
                 app:errorEnabled="true"
+                app:passwordToggleEnabled="true"
                 android:background="@color/colorSignBackground"
                 style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
             <com.google.android.material.textfield.TextInputEditText
