--- a/app/src/main/res/layout/update_password.xml
+++ b/app/src/main/res/layout/update_password.xml
@@ -12,6 +12,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 app:errorEnabled="true"
+                app:passwordToggleEnabled="true"
                 android:background="@color/colorSignBackground"
                 style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
             <com.google.android.material.textfield.TextInputEditText
