[V1.1.0] adjust database，add greenhouse

--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -178,6 +178,16 @@
             app:layout_constraintEnd_toEndOf="parent">
     </com.google.android.material.card.MaterialCardView>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addGreenhouseButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:maxImageSize="32dp"
+            style="@style/loginButton"
+            app:layout_constraintBottom_toBottomOf="@id/fragmentProfile"
+            app:layout_constraintEnd_toEndOf="@id/fragmentProfile"/>
+
    <!-- <com.google.android.material.button.MaterialButton
             android:id="@+id/signOutButton"
             android:enabled="true"
