--- a/app/src/main/res/layout/title_datalist.xml
+++ b/app/src/main/res/layout/title_datalist.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<!--androidx.coordinatorlayout.widget.CoordinatorLayout-->
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/titleDataList"
@@ -9,10 +10,22 @@
         android:focusable="true"
         android:focusableInTouchMode="true">
 
+
+        <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/greenHouseDisplayList"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:spinnerMode="dropdown"
+                android:padding="5dp"
+                android:layout_marginStart="20dp"
+                app:layout_constraintTop_toTopOf="@id/titleDataList"
+                app:layout_constraintStart_toStartOf="@id/titleDataList"/>
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:id="@+id/refreshRecycle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/greenHouseDisplayList">
 
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/dataList"
@@ -22,12 +35,6 @@
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/insertDataButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:layout_margin="16dp"
-                app:maxImageSize="32dp"
-                style="@style/loginButton"/>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <!--android:layout_gravity="bottom|end"-->
+
+</androidx.constraintlayout.widget.ConstraintLayout>
