--- a/app/src/main/res/layout/title_uploadimage.xml
+++ b/app/src/main/res/layout/title_uploadimage.xml
@@ -24,7 +24,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/uploadImageBlock"
-                    app:layout_constraintBottom_toTopOf="@+id/imageResult"
+                    app:layout_constraintBottom_toTopOf="@+id/greenHouseList"
                     android:layout_marginBottom="20dp"
                     android:visibility="invisible"/>
 
@@ -35,7 +35,7 @@
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     android:indeterminate="true"
                     app:layout_constraintTop_toTopOf="@+id/uploadImageBlock"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageResult"
+                    app:layout_constraintBottom_toBottomOf="@+id/greenHouseList"
                     app:layout_constraintStart_toStartOf="@+id/uploadImageBlock"
                     app:layout_constraintEnd_toEndOf="@+id/uploadImageBlock"
                     android:layout_marginBottom="35dp"
@@ -59,19 +59,22 @@
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                     app:layout_constraintTop_toTopOf="@id/uploadImageBlock"
-                    app:layout_constraintBottom_toTopOf="@+id/imageResult"
+                    app:layout_constraintBottom_toTopOf="@+id/greenHouseList"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginBottom="20dp"/>
 
-            <TextView
-                    android:id="@+id/imageResult"
-                    android:layout_width="match_parent"
+
+            <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/greenHouseList"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
+                    android:spinnerMode="dropdown"
                     app:layout_constraintTop_toBottomOf="@id/uploadImageButton"
-                    android:layout_marginTop="20dp"
-                    android:text="TEST"
-                    android:textSize="20sp"/>
+                    app:layout_constraintStart_toStartOf="@id/uploadImageBlock"
+                    app:layout_constraintEnd_toEndOf="@id/uploadImageBlock"
+                    android:layout_marginTop="10dp"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
