--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -6,6 +6,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:fitsSystemWindows="true"
+        android:background="@color/background"
         android:focusable="true"
         android:focusableInTouchMode="true">
 
@@ -38,7 +39,7 @@
                 app:layout_constraintTop_toTopOf="@id/profileBlock"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textStyle="bold" />
 
         <TextView
@@ -50,7 +51,7 @@
                 app:layout_constraintTop_toBottomOf="@id/profileUsername"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                android:textSize="20sp"/>
+                android:textSize="18sp"/>
 
         <TextView
                 android:id="@+id/profileEmail"
@@ -60,7 +61,7 @@
                 app:layout_constraintTop_toBottomOf="@id/profileUsername"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                android:textSize="20sp"/>
+                android:textSize="18sp"/>
 
 
 
