--- a/app/src/main/res/layout/title_datalist.xml
+++ b/app/src/main/res/layout/title_datalist.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--androidx.coordinatorlayout.widget.CoordinatorLayout-->
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/titleDataList"
@@ -17,24 +17,21 @@
                 android:layout_height="wrap_content"
                 android:spinnerMode="dropdown"
                 android:padding="5dp"
-                android:layout_marginStart="20dp"
-                app:layout_constraintTop_toTopOf="@id/titleDataList"
-                app:layout_constraintStart_toStartOf="@id/titleDataList"/>
+                android:layout_marginStart="20dp"/>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:id="@+id/refreshRecycle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/greenHouseDisplayList">
+                android:layout_height="wrap_content">
 
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/dataList"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"/>
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
         <!--android:layout_gravity="bottom|end"-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
