--- a/app/src/main/res/layout/title_uploadimage.xml
+++ b/app/src/main/res/layout/title_uploadimage.xml
@@ -73,7 +73,8 @@
                     app:layout_constraintTop_toBottomOf="@id/uploadImageButton"
                     app:layout_constraintStart_toStartOf="@id/uploadImageBlock"
                     app:layout_constraintEnd_toEndOf="@id/uploadImageBlock"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_marginTop="10dp"
+                    android:visibility="invisible"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
