--- a/app/src/main/res/layout/farm_overview.xml
+++ b/app/src/main/res/layout/farm_overview.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/farmLineChartLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <ImageView
-            android:id="@+id/testImage"
+    <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/farmLineChart"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/maxresdefault"/>
+            android:layout_height="300dp"
+            app:layout_constraintBottom_toBottomOf="@id/farmLineChartLayout"
+            app:layout_constraintEnd_toEndOf="@id/farmLineChartLayout"
+            app:layout_constraintStart_toStartOf="@id/farmLineChartLayout"
+            app:layout_constraintTop_toTopOf="@id/farmLineChartLayout">
 
-    <androidx.core.widget.ContentLoadingProgressBar
-            android:id="@+id/testProgress"
-            android:layout_width="250dp"
-            android:layout_height="20dp"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:indeterminate="false"
-            android:progress="0"
-            android:max="100"
-            android:layout_marginBottom="35dp"
-            android:visibility="invisible"/>
-</LinearLayout>
+    </com.github.mikephil.charting.charts.LineChart>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
