--- a/app/src/main/res/layout/dataitem.xml
+++ b/app/src/main/res/layout/dataitem.xml
@@ -45,8 +45,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_marginStart="8dp"
                         android:layout_marginBottom="8dp"
-                        android:padding="8dp"
-                        android:text="說明欄"/>
+                        android:padding="8dp"/>
 
         </RelativeLayout>
       <!--  <TextView
