--- a/app/src/main/res/layout/title_datalist.xml
+++ b/app/src/main/res/layout/title_datalist.xml
@@ -2,7 +2,7 @@
 <!--androidx.coordinatorlayout.widget.CoordinatorLayout-->
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:hint="http://schemas.android.com/tools"
         android:id="@+id/titleDataList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -11,13 +11,30 @@
         android:focusableInTouchMode="true">
 
 
-        <androidx.appcompat.widget.AppCompatSpinner
-                android:id="@+id/greenHouseDisplayList"
-                android:layout_width="wrap_content"
+        <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:spinnerMode="dropdown"
-                android:padding="5dp"
-                android:layout_marginStart="20dp"/>
+                android:orientation="horizontal">
+                <androidx.appcompat.widget.AppCompatSpinner
+                        android:id="@+id/greenHouseDisplayList"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:spinnerMode="dropdown"
+                        android:padding="5dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_weight="1"/>
+
+                <TextView
+                        android:id="@+id/dateList"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:gravity="center"
+                        android:textSize="16sp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_weight="2"/>
+        </LinearLayout>
+
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:id="@+id/refreshRecycle"
