--- a/app/src/main/res/layout-v26/activity_login.xml
+++ b/app/src/main/res/layout-v26/activity_login.xml
@@ -69,7 +69,7 @@
                             android:inputType="textEmailAddress"
                             android:imeOptions="actionNext"
                             android:selectAllOnFocus="true"
-                            android:textColor="@color/colorSign"
+                            android:textColor="@color/colorTextBlack"
                             android:textColorHint="@color/colorHint"
                             android:layout_marginTop="100dp"
                             android:layout_marginStart="50dp"
@@ -87,7 +87,7 @@
                             android:imeOptions="actionDone"
                             android:inputType="textPassword"
                             android:selectAllOnFocus="true"
-                            android:textColor="@color/colorSign"
+                            android:textColor="@color/colorTextBlack"
                             android:textColorHint="@color/colorHint"
                             app:layout_constraintTop_toBottomOf="@+id/username"
                             android:layout_marginTop="170dp"
