--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorPrimary">#FFCC80</color>
     <color name="colorPrimaryDark">#CA9B52</color>
     <color name="colorAccent">#00BCD4</color>
-    <color name="colorSign">#000000</color>
+    <color name="colorTextBlack">#000000</color>
     <color name="colorSignNoSelect">#757575</color>
     <color name="colorHint">#000000</color>  <!--#00BCD4-->
     <color name="mediumComponent">#FFFFFF</color>
