--- a/app/src/main/res/layout/farm_overview.xml
+++ b/app/src/main/res/layout/farm_overview.xml
@@ -7,15 +7,15 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/farmLineChart"
+    <com.github.mikephil.charting.charts.CombinedChart
+            android:id="@+id/farmCombineChart"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            app:layout_constraintBottom_toBottomOf="@id/farmLineChartLayout"
             app:layout_constraintEnd_toEndOf="@id/farmLineChartLayout"
             app:layout_constraintStart_toStartOf="@id/farmLineChartLayout"
-            app:layout_constraintTop_toTopOf="@id/farmLineChartLayout">
+            app:layout_constraintTop_toTopOf="@id/farmLineChartLayout"
+            android:layout_marginTop="100dp">
 
-    </com.github.mikephil.charting.charts.LineChart>
+    </com.github.mikephil.charting.charts.CombinedChart>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
