--- a/app/src/main/res/layout/title_uploadimage.xml
+++ b/app/src/main/res/layout/title_uploadimage.xml
@@ -4,6 +4,7 @@
         android:id="@+id/titleUploadImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         android:focusable="true"
         android:focusableInTouchMode="true">
 
@@ -24,7 +25,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/uploadImageBlock"
                     app:layout_constraintBottom_toTopOf="@+id/greenHouseList"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="50dp"
                     android:visibility="invisible"/>
 
             <TextView
@@ -47,7 +48,7 @@
                     app:layout_constraintBottom_toBottomOf="@+id/greenHouseList"
                     app:layout_constraintStart_toStartOf="@+id/uploadImageBlock"
                     app:layout_constraintEnd_toEndOf="@+id/uploadImageBlock"
-                    android:layout_marginBottom="25dp"
+                    android:layout_marginBottom="55dp"
                     android:visibility="invisible"/>
                     <!--
                     android:progress="0"
@@ -57,7 +58,7 @@
                     android:id="@+id/uploadImageButton"
                     android:enabled="true"
                     android:layout_width="0dp"
-                    android:layout_height="250dp"
+                    android:layout_height="220dp"
                     android:text="@string/upload_image"
                     app:cornerRadius="20dp"
                     android:textSize="50sp"
