--- a/app/src/main/res/layout/title_uploadimage.xml
+++ b/app/src/main/res/layout/title_uploadimage.xml
@@ -25,7 +25,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/uploadImageBlock"
                     app:layout_constraintBottom_toTopOf="@+id/greenHouseList"
-                    android:layout_marginBottom="50dp"
+                    android:layout_marginBottom="20dp"
                     android:visibility="invisible"/>
 
             <TextView
@@ -112,6 +112,16 @@
                         android:selectAllOnFocus="true">
                 </com.google.android.material.textfield.TextInputEditText>
             </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                    android:id="@+id/imageResult"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textSize="30sp"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView"
+                    android:layout_marginTop="50dp"
+                    android:visibility="invisible"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
