--- a/app/src/main/res/layout/farm_overview.xml
+++ b/app/src/main/res/layout/farm_overview.xml
@@ -11,10 +11,13 @@
             android:id="@+id/farmCombineChart"
             android:layout_width="match_parent"
             android:layout_height="300dp"
+            android:clipChildren="false"
             app:layout_constraintEnd_toEndOf="@id/farmLineChartLayout"
             app:layout_constraintStart_toStartOf="@id/farmLineChartLayout"
             app:layout_constraintTop_toTopOf="@id/farmLineChartLayout"
-            android:layout_marginTop="100dp">
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="20dp">
 
     </com.github.mikephil.charting.charts.CombinedChart>
 
