--- a/app/src/main/res/layout/title_uploadimage.xml
+++ b/app/src/main/res/layout/title_uploadimage.xml
@@ -15,7 +15,7 @@
             android:padding="20dp"
             android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="10dp">
 
             <ImageView
                     android:id="@+id/imageView"
@@ -23,9 +23,9 @@
                     android:layout_height="0dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/uploadImageBlock"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@+id/greenHouseList"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="30dp"
                     android:visibility="invisible"/>
 
             <TextView
@@ -120,7 +120,37 @@
                     android:gravity="center"
                     android:textSize="30sp"
                     app:layout_constraintTop_toBottomOf="@+id/imageView"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="20dp"
+                    android:visibility="invisible"/>
+
+            <TextView
+                    android:id="@+id/imageHouse"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toBottomOf="@+id/imageResult"
+                    android:layout_marginTop="10dp"
+                    android:visibility="invisible"/>
+
+            <TextView
+                    android:id="@+id/imagePlantName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toBottomOf="@+id/imageHouse"
+                    android:layout_marginTop="10dp"
+                    android:visibility="invisible"/>
+
+            <TextView
+                    android:id="@+id/imageDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toBottomOf="@+id/imagePlantName"
+                    android:layout_marginTop="10dp"
                     android:visibility="invisible"/>
 
 
