--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="uploadButtonNormal">#FFFFFF</color>
     <color name="uploadButtonPress">#008FA1</color>
     <color name="background">#F5F5F5</color>
+    <color name="colorBar">#9BE7FF</color>
 
     <color name="health">#00C853</color>
     <color name="unhealth">#D50000</color>
