--- a/app/src/main/res/layout/farm_overview.xml
+++ b/app/src/main/res/layout/farm_overview.xml
@@ -7,18 +7,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <com.github.mikephil.charting.charts.CombinedChart
-            android:id="@+id/farmCombineChart"
+    <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:clipChildren="false"
-            app:layout_constraintEnd_toEndOf="@id/farmLineChartLayout"
-            app:layout_constraintStart_toStartOf="@id/farmLineChartLayout"
-            app:layout_constraintTop_toTopOf="@id/farmLineChartLayout"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginTop="20dp">
-
-    </com.github.mikephil.charting.charts.CombinedChart>
+            android:layout_height="match_parent">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <com.github.mikephil.charting.charts.CombinedChart
+                    android:id="@+id/farmCombineChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:clipChildren="false"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginTop="20dp"/>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
