--- a/app/src/main/res/layout/title_uploadimage.xml
+++ b/app/src/main/res/layout/title_uploadimage.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.coordinatorlayout.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/titleUploadImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -8,155 +11,178 @@
         android:focusable="true"
         android:focusableInTouchMode="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/uploadImageBlock"
+
+    <androidx.core.widget.NestedScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="20dp"
-            android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="10dp">
+            android:fillViewport="true"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toTopOf="@+id/greenHouseList"
-                    android:layout_marginBottom="30dp"
-                    android:visibility="invisible"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/uploadImageBlock"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="20dp"
+                android:layout_marginTop="10dp">
 
-            <TextView
-                    android:id="@+id/hintImageProgressText"
-                    android:layout_width="250dp"
-                    android:layout_height="20dp"
-                    app:layout_constraintBottom_toTopOf="@id/uploadImageProgress"
-                    app:layout_constraintStart_toStartOf="@+id/uploadImageBlock"
-                    app:layout_constraintEnd_toEndOf="@+id/uploadImageBlock"
-                    android:layout_marginBottom="10dp"
-                    android:visibility="invisible"/>
+                <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toTopOf="@+id/greenHouseList"
+                        android:layout_marginBottom="30dp"
+                        android:visibility="invisible"/>
 
-            <androidx.core.widget.ContentLoadingProgressBar
-                    android:id="@+id/uploadImageProgress"
-                    android:layout_width="250dp"
-                    android:layout_height="20dp"
-                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                    android:indeterminate="true"
-                    app:layout_constraintTop_toTopOf="@+id/uploadImageBlock"
-                    app:layout_constraintBottom_toBottomOf="@+id/greenHouseList"
-                    app:layout_constraintStart_toStartOf="@+id/uploadImageBlock"
-                    app:layout_constraintEnd_toEndOf="@+id/uploadImageBlock"
-                    android:layout_marginBottom="55dp"
-                    android:visibility="invisible"/>
-                    <!--
-                    android:progress="0"
-                    android:max="100"-->
+                <TextView
+                        android:id="@+id/hintImageProgressText"
+                        android:layout_width="250dp"
+                        android:layout_height="20dp"
+                        app:layout_constraintBottom_toTopOf="@id/uploadImageProgress"
+                        app:layout_constraintStart_toStartOf="@+id/uploadImageBlock"
+                        app:layout_constraintEnd_toEndOf="@+id/uploadImageBlock"
+                        android:layout_marginBottom="10dp"
+                        android:visibility="invisible"/>
 
-            <com.google.android.material.button.MaterialButton
-                    android:id="@+id/uploadImageButton"
-                    android:enabled="true"
-                    android:layout_width="0dp"
-                    android:layout_height="220dp"
-                    android:text="@string/upload_image"
-                    app:cornerRadius="20dp"
-                    android:textSize="50sp"
-                    android:gravity="center"
-                    app:strokeWidth="3dp"
-                    app:strokeColor="@color/colorAccent"
-                    app:rippleColor="@color/uploadButtonPress"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-                    app:layout_constraintTop_toTopOf="@id/uploadImageBlock"
-                    app:layout_constraintBottom_toTopOf="@+id/greenHouseList"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginBottom="20dp"/>
+                <androidx.core.widget.ContentLoadingProgressBar
+                        android:id="@+id/uploadImageProgress"
+                        android:layout_width="250dp"
+                        android:layout_height="20dp"
+                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                        android:indeterminate="true"
+                        app:layout_constraintTop_toTopOf="@+id/uploadImageBlock"
+                        app:layout_constraintBottom_toBottomOf="@+id/greenHouseList"
+                        app:layout_constraintStart_toStartOf="@+id/uploadImageBlock"
+                        app:layout_constraintEnd_toEndOf="@+id/uploadImageBlock"
+                        android:layout_marginBottom="55dp"
+                        android:visibility="invisible"/>
+                        <!--
+                        android:progress="0"
+                        android:max="100"-->
+
+                <com.google.android.material.button.MaterialButton
+                        android:id="@+id/uploadImageButton"
+                        android:enabled="true"
+                        android:layout_width="0dp"
+                        android:layout_height="220dp"
+                        android:text="@string/upload_image"
+                        app:cornerRadius="20dp"
+                        android:textSize="50sp"
+                        android:gravity="center"
+                        app:strokeWidth="3dp"
+                        app:strokeColor="@color/colorAccent"
+                        app:rippleColor="@color/uploadButtonPress"
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                        app:layout_constraintTop_toTopOf="@id/uploadImageBlock"
+                        app:layout_constraintBottom_toTopOf="@+id/greenHouseList"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginBottom="20dp"/>
 
 
-            <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/greenHouseList"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:spinnerMode="dropdown"
-                    app:layout_constraintHorizontal_weight="1"
-                    app:layout_constraintTop_toBottomOf="@id/uploadImageButton"
-                    app:layout_constraintStart_toStartOf="@id/uploadImageBlock"
-                    app:layout_constraintEnd_toStartOf="@id/plantNameTextLayout"
-                    android:layout_marginTop="55dp"/>
+                <androidx.appcompat.widget.AppCompatSpinner
+                        android:id="@+id/greenHouseList"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:spinnerMode="dropdown"
+                        app:layout_constraintHorizontal_weight="1"
+                        app:layout_constraintTop_toBottomOf="@id/uploadImageButton"
+                        app:layout_constraintStart_toStartOf="@id/uploadImageBlock"
+                        app:layout_constraintEnd_toStartOf="@id/plantNameTextLayout"
+                        android:layout_marginTop="55dp"/>
 
-            <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/plantNameTextLayout"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_plant_name"
-                    app:errorEnabled="true"
-                    app:counterEnabled="true"
-                    app:counterMaxLength="10"
-                    android:background="@color/background"
-                    app:layout_constraintHorizontal_weight="2"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
-                    app:layout_constraintTop_toBottomOf="@id/uploadImageButton"
-                    app:layout_constraintStart_toEndOf="@+id/greenHouseList"
-                    app:layout_constraintEnd_toEndOf="@id/uploadImageBlock"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginTop="30dp">
-                <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/plantNameText"
+                <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/plantNameTextLayout"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/prompt_plant_name"
+                        app:errorEnabled="true"
+                        app:counterEnabled="true"
+                        app:counterMaxLength="10"
+                        android:background="@color/background"
+                        app:layout_constraintHorizontal_weight="2"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                        app:layout_constraintTop_toBottomOf="@id/uploadImageButton"
+                        app:layout_constraintStart_toEndOf="@+id/greenHouseList"
+                        app:layout_constraintEnd_toEndOf="@id/uploadImageBlock"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="30dp">
+                    <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/plantNameText"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:imeOptions="actionDone"
+                            android:inputType="text"
+                            android:maxLength="10"
+                            android:selectAllOnFocus="true">
+                    </com.google.android.material.textfield.TextInputEditText>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <TextView
+                        android:id="@+id/imageResult"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:imeOptions="actionDone"
-                        android:inputType="text"
-                        android:maxLength="10"
-                        android:selectAllOnFocus="true">
-                </com.google.android.material.textfield.TextInputEditText>
-            </com.google.android.material.textfield.TextInputLayout>
+                        android:gravity="center"
+                        android:textSize="30sp"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView"
+                        android:layout_marginTop="20dp"
+                        android:visibility="invisible"/>
 
-            <TextView
-                    android:id="@+id/imageResult"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textSize="30sp"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView"
-                    android:layout_marginTop="20dp"
-                    android:visibility="invisible"/>
+                <TextView
+                        android:id="@+id/imageHouse"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:textSize="20sp"
+                        app:layout_constraintTop_toBottomOf="@+id/imageResult"
+                        android:layout_marginTop="10dp"
+                        android:visibility="invisible"/>
 
-            <TextView
-                    android:id="@+id/imageHouse"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:textSize="20sp"
-                    app:layout_constraintTop_toBottomOf="@+id/imageResult"
-                    android:layout_marginTop="10dp"
-                    android:visibility="invisible"/>
+                <TextView
+                        android:id="@+id/imagePlantName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:textSize="20sp"
+                        app:layout_constraintTop_toBottomOf="@+id/imageHouse"
+                        android:layout_marginTop="10dp"
+                        android:visibility="invisible"/>
 
-            <TextView
-                    android:id="@+id/imagePlantName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:textSize="20sp"
-                    app:layout_constraintTop_toBottomOf="@+id/imageHouse"
-                    android:layout_marginTop="10dp"
-                    android:visibility="invisible"/>
-
-            <TextView
-                    android:id="@+id/imageDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:textSize="20sp"
-                    app:layout_constraintTop_toBottomOf="@+id/imagePlantName"
-                    android:layout_marginTop="10dp"
-                    android:visibility="invisible"/>
+                <TextView
+                        android:id="@+id/imageDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:textSize="20sp"
+                        app:layout_constraintTop_toBottomOf="@+id/imagePlantName"
+                        android:layout_marginTop="10dp"
+                        android:visibility="invisible"/>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/floatingCoordinate"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_gravity="bottom|end"
+            android:paddingBottom="45dp">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/insertImageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:layout_gravity="bottom|end"
+                app:srcCompat="@drawable/photo"
+                app:maxImageSize="32dp"
+                style="@style/loginButton"/>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+   <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/insertImageButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -164,10 +190,11 @@
                     android:layout_gravity="bottom|end"
                     app:srcCompat="@drawable/photo"
                     app:maxImageSize="32dp"
-                    style="@style/loginButton">
+                    style="@style/loginButton">-->
         <!-- style="@style/Widget.Design.FloatingActionButton"-->
 
 
-    </com.google.android.material.floatingactionbutton.FloatingActionButton>
+   <!-- </com.google.android.material.floatingactionbutton.FloatingActionButton>-->
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
