--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,10 +9,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name = "AppTheme.NoActionBar">
+    <style name = "AppTheme.NoActionBar" parent="AppTheme">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
     </style>
 
     <style name="mediumCardView">
