--- a/app/src/main/res/layout-v26/activity_login.xml
+++ b/app/src/main/res/layout-v26/activity_login.xml
@@ -19,127 +19,133 @@
             android:id="@+id/headerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="90dp"
+            android:layout_marginBottom="30dp"
             android:gravity="center"
             android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@id/footerLayout">
+            app:layout_constraintBottom_toTopOf="@id/signView">
 
-            <ImageView
-                    android:id="@+id/loginLogo"
-                    android:src="@mipmap/logo_foreground"
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"/>
+        <ImageView
+                android:id="@+id/signLogo"
+                android:src="@mipmap/logo_foreground"
+                android:layout_width="180dp"
+                android:layout_height="180dp"/>
 
     </LinearLayout>
 
     <!--Footer Layout-->
+    <!-- <LinearLayout
+             android:id="@+id/footerLayout"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="vertical"
+             android:paddingLeft="10dp"
+             android:paddingRight="10dp"
+             app:layout_constraintBottom_toBottomOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintStart_toStartOf="parent"
+             android:layout_marginBottom="25dp">
+
+         <com.google.android.material.card.MaterialCardView
+                 android:id="@+id/loginCard"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:minHeight="380dp"
+                 style="@style/mediumCardView">
+
+             <GridView
+                     android:id="@+id/titleGridView"
+                     android:layout_width="wrap_content"
+                     android:layout_height="80dp"
+                     android:numColumns="2"
+                     android:horizontalSpacing="15dp"/>
+
+             <EditText
+                     android:id="@+id/loginUsername"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:hint="@string/prompt_email"
+                     android:inputType="textEmailAddress"
+                     android:imeOptions="actionNext"
+                     android:selectAllOnFocus="true"
+                     android:textColor="@color/colorLogin"
+                     android:textColorHint="@color/colorHint"
+                     android:layout_marginTop="110dp"
+                     android:layout_marginStart="70dp"
+                     android:layout_marginEnd="25dp"/>
+
+             <EditText
+                     android:id="@+id/loginPassword"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:hint="@string/prompt_password"
+                     android:imeActionLabel="@string/action_sign_in_short"
+                     android:imeOptions="actionDone"
+                     android:inputType="textPassword"
+                     android:selectAllOnFocus="true"
+                     android:textColor="@color/colorLogin"
+                     android:textColorHint="@color/colorHint"
+                     android:layout_marginTop="160dp"
+                     android:layout_marginStart="70dp"
+                     android:layout_marginEnd="25dp"/>
+
+             <ProgressBar
+                     android:id="@+id/loading"
+                     android:visibility="gone"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"/>
+
+
+         </com.google.android.material.card.MaterialCardView>
+     </LinearLayout>-->
+
+
     <LinearLayout
-            android:id="@+id/footerLayout"
+            android:id="@+id/signView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="380dp"
             android:orientation="vertical"
+            android:gravity="center"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="40dp"> <!--最下面放按鈕-->
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="5dp">
 
-            <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/loginCard"
+        <com.google.android.material.card.MaterialCardView
+                android:id="@+id/signViewCard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="380dp"
+                style="@style/mediumCardView">
+
+            <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/signTabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    app:tabMinWidth="150dp"
+                    app:tabSelectedTextColor="@color/colorTextBlack"
+                    app:tabTextColor="@color/colorSignNoSelect"
+                    app:tabGravity="fill"
+                    app:tabMode="fixed"
+                    app:tabTextAppearance="@style/tabLayoutAppearance"/>
+            <!--    app:tabTextAppearance="@android:style/TextAppearance.Holo.Large"/> Large/Medium/Small-->
+
+            <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/signPager"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:minHeight="400dp"
-                    style="@style/mediumCardView">
+                    android:minHeight="400dp"/>
 
-                <GridView
-                        android:id="@+id/titleGridView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="80dp"
-                        android:numColumns="2"
-                        android:horizontalSpacing="10dp"/>
-
-
-                    <EditText
-                            android:id="@+id/username"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/prompt_email"
-                            android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
-                            android:inputType="textEmailAddress"
-                            android:imeOptions="actionNext"
-                            android:selectAllOnFocus="true"
-                            android:textColor="@color/colorTextBlack"
-                            android:textColorHint="@color/colorHint"
-                            android:layout_marginTop="100dp"
-                            android:layout_marginStart="50dp"
-                            android:layout_marginEnd="30dp"
-                            app:layout_constraintTop_toBottomOf="@id/titleGridView"
-
-                    />
-
-                    <EditText
-                            android:id="@+id/password"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/prompt_password"
-                            android:imeActionLabel="@string/action_sign_in_short"
-                            android:imeOptions="actionDone"
-                            android:inputType="textPassword"
-                            android:selectAllOnFocus="true"
-                            android:textColor="@color/colorTextBlack"
-                            android:textColorHint="@color/colorHint"
-                            app:layout_constraintTop_toBottomOf="@+id/username"
-                            android:layout_marginTop="170dp"
-                            android:layout_marginLeft="50dp"
-                            android:layout_marginRight="30dp"/>
-
-                <Button
-                        android:id="@+id/login"
-                        android:enabled="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="48dp"
-                        android:text="@string/action_sign_in"/>
+            <ProgressBar
+                    android:id="@+id/loading"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+        </com.google.android.material.card.MaterialCardView>
 
 
-                <ProgressBar
-                        android:id="@+id/loading"
-                        android:visibility="gone"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
 
-
-            </com.google.android.material.card.MaterialCardView>
-<!--
-        <Button
-                android:id="@+id/login"
-                android:enabled="true"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:text="@string/action_sign_in"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="570dp"
-                app:layout_constraintHorizontal_bias="0.5"/>
-
-
-        <ProgressBar
-                android:id="@+id/loading"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="64dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="64dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.3"/>
--->
     </LinearLayout>
 
 
