--- a/app/src/main/res/layout/farm_overview.xml
+++ b/app/src/main/res/layout/farm_overview.xml
@@ -47,7 +47,7 @@
                             android:textSize="20sp"
                             android:gravity="center_vertical|center_horizontal"
                             android:layout_marginEnd="5dp"
-                            android:text="植物狀況極好!"/>
+                            android:text="@string/farm_no_plant"/>
 
                 </LinearLayout>
 
