--- a/app/src/main/res/layout/data_upload.xml
+++ b/app/src/main/res/layout/data_upload.xml
@@ -37,6 +37,7 @@
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     android:maxLength="10"
+                    android:textSize="14sp"
                     android:selectAllOnFocus="true">
             </com.google.android.material.textfield.TextInputEditText>
         </com.google.android.material.textfield.TextInputLayout>
