--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -22,7 +22,7 @@
                         app:tabGravity="fill"
                         app:tabMode="fixed"
                         app:tabBackground="@color/colorPrimary"
-                        app:tabTextAppearance="@style/contentTabLayoutAppearance"
+                        app:tabTextAppearance="@android:style/TextAppearance.Holo.Medium"
                         app:layout_scrollFlags="scroll|enterAlways|snap"/>
 
         </com.google.android.material.appbar.AppBarLayout>
