--- a/app/src/main/res/layout/title_signin.xml
+++ b/app/src/main/res/layout/title_signin.xml
@@ -11,15 +11,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/signInEmailBlock"
             android:layout_width="match_parent"
-            android:layout_height="170dp"
+            android:layout_height="160dp"
             android:orientation="horizontal"
             app:layout_constraintTop_toTopOf="parent">
 
 
         <ImageView
                 android:id="@+id/signInEmailLogo"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="33dp"
+                android:layout_height="33dp"
                 android:src="@mipmap/email"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/signInEmailTextLayout"
@@ -46,6 +46,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="text"
                     android:imeOptions="actionNext"
+                    android:textSize="13sp"
                     android:selectAllOnFocus="true">
             </com.google.android.material.textfield.TextInputEditText>
         </com.google.android.material.textfield.TextInputLayout>
@@ -71,20 +72,20 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/signInPasswordBlock"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@+id/signInEmailBlock">
 
             <ImageView
                     android:id="@+id/signInPasswordLogo"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="33dp"
+                    android:layout_height="0dp"
                     android:src="@mipmap/lock"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/signInPasswordTextLayout"
+                    app:layout_constraintTop_toTopOf="@+id/signInPasswordBlock"
                     app:layout_constraintBottom_toBottomOf="@+id/signInPasswordBlock"
-                    android:layout_marginStart="25dp"
-                    android:layout_marginBottom="25dp"/>
+                    android:layout_marginStart="25dp"/>
 
             <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/signInPasswordTextLayout"
@@ -93,7 +94,8 @@
                     android:hint="@string/prompt_password"
                     app:layout_constraintStart_toEndOf="@id/signInPasswordLogo"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="@+id/signInPasswordBlock"
+                    app:layout_constraintTop_toTopOf="@+id/signInPasswordBlock"
+                    android:layout_marginTop="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="25dp"
                     app:errorEnabled="true"
@@ -107,6 +109,7 @@
                         android:imeActionLabel="@string/action_sign_in_short"
                         android:imeOptions="actionDone"
                         android:inputType="textPassword"
+                        android:textSize="13sp"
                         android:selectAllOnFocus="true">
                 </com.google.android.material.textfield.TextInputEditText>
             </com.google.android.material.textfield.TextInputLayout>
@@ -161,7 +164,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="5dp"
                 app:cornerRadius="200dp"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:padding="10dp"
                 android:gravity="center"
                 style="@style/loginButton"
@@ -177,7 +180,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginEnd="10dp"
             app:cornerRadius="200dp"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:padding="10dp"
             android:gravity="center"
             style="@style/loginButton"
