--- a/app/src/main/res/layout/title_signup.xml
+++ b/app/src/main/res/layout/title_signup.xml
@@ -19,8 +19,8 @@
 
         <ImageView
                 android:id="@+id/signUpEmailLogo"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="33dp"
+                android:layout_height="33dp"
                 android:src="@mipmap/email"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/signUpEmailTextLayout"
@@ -47,6 +47,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
                     android:imeOptions="actionNext"
+                    android:textSize="13sp"
                     android:selectAllOnFocus="true">
             </com.google.android.material.textfield.TextInputEditText>
         </com.google.android.material.textfield.TextInputLayout>
@@ -72,21 +73,21 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/signUpUsernameBlock"
             android:layout_width="match_parent"
-            android:layout_height="85dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@+id/signUpEmailBlock">
 
 
         <ImageView
                 android:id="@+id/signUpUsernameLogo"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="33dp"
+                android:layout_height="0dp"
                 android:src="@mipmap/profile"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/signUpUsernameTextLayout"
+                app:layout_constraintTop_toTopOf="@+id/signUpUsernameBlock"
                 app:layout_constraintBottom_toBottomOf="@+id/signUpUsernameBlock"
-                android:layout_marginStart="25dp"
-                android:layout_marginBottom="27dp"/>
+                android:layout_marginStart="25dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signUpUsernameTextLayout"
@@ -95,7 +96,7 @@
                 android:hint="@string/prompt_username"
                 app:layout_constraintStart_toEndOf="@id/signUpUsernameLogo"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="@+id/signUpUsernameBlock"
+                app:layout_constraintTop_toTopOf="@+id/signUpUsernameBlock"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="25dp"
                 app:errorEnabled="true"
@@ -110,6 +111,7 @@
                     android:inputType="text"
                     android:imeOptions="actionNext"
                     android:maxLength="10"
+                    android:textSize="13sp"
                     android:selectAllOnFocus="true">
             </com.google.android.material.textfield.TextInputEditText>
         </com.google.android.material.textfield.TextInputLayout>
@@ -119,20 +121,20 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/signUpPasswordBlock"
             android:layout_width="match_parent"
-            android:layout_height="85dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@+id/signUpUsernameBlock">
 
         <ImageView
                 android:id="@+id/signUpPasswordLogo"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="33dp"
+                android:layout_height="0dp"
                 android:src="@mipmap/lock"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/signUpPasswordTextLayout"
+                app:layout_constraintTop_toTopOf="@+id/signUpPasswordBlock"
                 app:layout_constraintBottom_toBottomOf="@+id/signUpPasswordBlock"
-                android:layout_marginStart="25dp"
-                android:layout_marginBottom="27dp"/>
+                android:layout_marginStart="25dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signUpPasswordTextLayout"
@@ -141,7 +143,7 @@
                 android:hint="@string/prompt_password"
                 app:layout_constraintStart_toEndOf="@id/signUpPasswordLogo"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="@+id/signUpPasswordBlock"
+                app:layout_constraintTop_toTopOf="@+id/signUpPasswordBlock"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="25dp"
                 app:errorEnabled="true"
@@ -155,6 +157,7 @@
                     android:imeActionLabel="@string/action_sign_up_short"
                     android:imeOptions="actionDone"
                     android:inputType="textPassword"
+                    android:textSize="13sp"
                     android:selectAllOnFocus="true">
             </com.google.android.material.textfield.TextInputEditText>
         </com.google.android.material.textfield.TextInputLayout>
@@ -186,7 +189,7 @@
             android:text="@string/action_sign_up"
             android:layout_marginBottom="5dp"
             app:cornerRadius="200dp"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:padding="10dp"
             android:gravity="center"
             style="@style/loginButton"
